--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "isun-website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "axios": "^1.5.0",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1"
+    
   },
   "scripts": {
     "start": "react-scripts start",
